[style] background LoaderComponent

--- a/frontend/src/components/LoaderComponent/LoaderComponent.module.css
+++ b/frontend/src/components/LoaderComponent/LoaderComponent.module.css
@@ -110,7 +110,7 @@
   height: 28px;
   margin: 2px;
   border-radius: 0px;
-  background: #ee6c4d;
+  background: #C586A5;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
